Fix shift select when uploading new photos

--- a/app/assets/stylesheets/albums/index.css.scss
+++ b/app/assets/stylesheets/albums/index.css.scss
@@ -1,4 +1,8 @@
 .albums.index {
+  .album-feed {
+    margin: 0 $side-width;
+  }
+
   .album-cover {
     display: inline-block;
     background-size: cover;
